<resources>
    <string name="app_name">HW04_Gymlog_V3.0.0</string>
    <string name="exercise">exercise</string>
    <string name="enter_an_exercise">Enter an Exercise</string>
    <string name="weight">Weight</string>
    <string name="exercise0">Exercise</string>
    <string name="enter_a_weight">Enter a weight</string>
    <string name="enter_reps">Enter reps</string>
    <string name="reps">reps</string>
    <string name="log">Log!</string>
    <string name="nothing_to_show_time_to_hit_the_gym">Nothing to show time to hit the gym</string>
    <string name="login_welcome">Welcome to the GymLog. \nPlease Sign In</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="login">Login!</string>
</resources>