<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logDisplayTextView"
        android:layout_width="390dp"
        android:layout_height="200dp"
        android:text="Hello World!"
        android:layout_marginTop="16dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"/>
    
    <TextView
        android:layout_width="136dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/exercise0"
        app:layout_constraintTop_toBottomOf="@+id/logDisplayTextView"
        android:id="@+id/exerciseLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/exerciseInputEditText"
        android:layout_width="222dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_an_exercise"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        app:layout_constraintStart_toEndOf="@+id/exerciseLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/logDisplayTextView" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dip"
        android:layout_marginTop="8dp"
        android:text="@string/weight"
        android:id="@+id/weightLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/exerciseLabelTextView" />
    <EditText
        android:layout_width="222dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:inputType="number|numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/weightLabelTextView"
        android:id="@+id/WeightInputEditText"
        android:hint="@string/enter_a_weight" />
    <TextView
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dip"
        android:layout_marginTop="8dp"
        android:text="@string/reps"
        android:id="@+id/repLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/weightLabelTextView" />
    <EditText
        android:layout_width="222dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/repLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/repLabelTextView"
        android:id="@+id/repInputEditText"
        android:hint="@string/enter_reps" />
    <Button
        android:layout_width="390dp"
        android:layout_height="205dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repInputEditText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/log"
        android:textSize="36sp"












</androidx.constraintlayout.widget.ConstraintLayout>